# capture-page-tools

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: deploy-to-huggingface.yml
docs/: README.md
notebooks/: notes.ipynb
src/: __init__.py
src/common/: config.py
src/modules/api/: __init__.py  app.py  index.py
src/modules/api/routes/: __init__.py  v1.py
src/modules/apps/: __init__.py
src/shared/utils/: validation.py
src/utils/: __init__.py  math.py
tests/: __init__.py  test_math.py
